removing index.html from pages folder

--- a/DesarrolloWeb/index.html
+++ b/DesarrolloWeb/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicompu-Inicio</title>
-    <link rel="stylesheet" href="../css/indexStyle.css">
+    <link rel="stylesheet" href="../DesarrolloWeb/css/indexStyle.css">
 </head>
 <body>
     <header>
         <nav>
             <h1> SERVICOMPU </h1>
             <a href="index.html"> Inicio </a>
-            <a href="quienes.html"> Quienes Somos </a>
-            <a href="contactanos.html"> Contactanos </a>
-            <a href="tienda.html"> Tienda </a>
-            <a href="crearCuenta.html"> Crear Cuenta </a>
+            <a href="../DesarrolloWeb/pages/quienes.html"> Quienes Somos </a>
+            <a href="../DesarrolloWeb/pages/contactanos.html"> Contactanos </a>
+            <a href="../DesarrolloWeb/pages/tienda.html"> Tienda </a>
+            <a href="../DesarrolloWeb/pages/crearCuenta.html"> Crear Cuenta </a>
         </nav>
     </header>
     <main>
         <article class="Repuestos">
             <p> ¡Todos los Repuestos de Notebook que Necesitas en un solo lugar!</p>
             <form>            
-                <img src="../media/Servicompu_Coolers.png" alt="Servicompu_Coolers">
-                <img src="../media/Servicompu_Flexs.png" alt="Servicompu_Flexs">
-                <img src="../media/Servicompu_Teclados.png" alt="Servicompu_Teclados">
+                <img src="../DesarrolloWeb/media/Servicompu_Coolers.png" alt="Servicompu_Coolers">
+                <img src="../DesarrolloWeb/media/Servicompu_Flexs.png" alt="Servicompu_Flexs">
+                <img src="../DesarrolloWeb/media/Servicompu_Teclados.png" alt="Servicompu_Teclados">
             </form>          
         </article>      
         <article class="Ofertas">
