--- a/DesarrolloWeb/pages/contactanos.html
+++ b/DesarrolloWeb/pages/contactanos.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <h1> SERVICOMPU </h1>
-            <a href="index.html"> Inicio </a>
+            <a href="../index.html"> Inicio </a>
             <a href="quienes.html"> Quienes Somos </a>
             <a href="contactanos.html"> Contactanos </a>
             <a href="tienda.html"> Tienda </a>
