--- a/DesarrolloWeb/pages/crearCuenta.html
+++ b/DesarrolloWeb/pages/crearCuenta.html
@@ -18,43 +18,44 @@
         </nav>
     </header>
     <main>
-        <article>       
-            <form>
-                <h1>Mi Cuenta</h1>
-                <h2>Acceder Registrarse</h2>
-                <br>
-                <div class="MiCuenta">
-                    <label>Nombre de usuario o correo electrónico *</label>
-                    <label class="NuevoUsuario">Dirección de correo electrónico*</label>
+        <h1>Mi Cuenta</h1>
+        <section>
+            <div class="main">
+                <div class="Area">
+                    <div class="Acceder">           
+                        <h2>Acceder</h2>
+                        <label>Nombre de usuario o correo electrónico *</label>
+                        <br>
+                        <input class="Text" type="text">
+                        <br>
+                        <label>Contraseña*</label>
+                        <br>
+                        <input class="Text" type="text">      
+                        <br>        
+                        <label>Recuérdame</label>
+                        <input type="radio">      
+                        <br>
+                        <button>Acceder</button>     
+                    </div>
+                </div>      
+                <div class="Area">
+                    <div class="Registrarse">
+                        <h2>Registrarse</h2>
+                        <label>Dirección de correo electrónico*</label>
+                        <br>
+                        <input class="Text" type="text">
+                        <br>
+                        <p>Se enviará un enlace a tu dirección de correo electrónico <br> 
+                            para establecer una nueva contraseña.<br>
+                            Tus datos personales se utilizarán para procesar tu pedido,<br>
+                            mejorar tu experiencia en esta web, gestionar el acceso a tu cuenta<br> 
+                            y otros propósitos descritos en nuestra política de privacidad.</p>
+                        <br>
+                        <button>Registrarse</button>    
+                    </div>    
                 </div>
-                <div class="MiCuentaInputField">
-                    <input type="text">
-                    <input type="text">
-                </div>
-                <br>
-                <div class="Contraseña">
-                    <label>Contraseña*</label>
-                    <br>
-                    <input type="text">              
-                </div>
-                <div class="Recuerdame">
-                    <label>Recuérdame</label>
-                    <input type="radio">
-                    <p class="Instrucciones">Se enviará un enlace a tu dirección de correo electrónico <br> 
-                        para establecer una nueva contraseña.<br>
-                        Tus datos personales se utilizarán para procesar tu pedido,<br>
-                        mejorar tu experiencia en esta web, gestionar el acceso a tu cuenta<br> 
-                        y otros propósitos descritos en nuestra política de privacidad.</p>
-                </div>  
-                <br>    
-                <div class="Acceder">
-                <button>Acceder</button>        
-                </div>    
-                <div class="Registrarse">
-                    <button>Registrarse</button>
-                </div>  
-            </form>
-        </article>   
+            </div> 
+        </section>
     </main>
 </body>
 </html>
