grid on tienda.html

--- a/DesarrolloWeb/pages/tienda.html
+++ b/DesarrolloWeb/pages/tienda.html
@@ -54,6 +54,18 @@
                 <img src="../media/bateria_1.png" alt="bateria_1">               
             </div>
         </section>
+        <section>
+            <div>
+                <h2>Cargador</h2>
+                <img src="../media/Cargador_1.png" alt="Cargador_1">               
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Flex</h2>
+                <img src="../media/flex_1.png" alt="flex_1">               
+            </div>
+        </section>
     </main>
 </body>
 </html>
