--- a/DesarrolloWeb/index.html
+++ b/DesarrolloWeb/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicompu-Inicio</title>
     <link rel="stylesheet" href="../DesarrolloWeb/css/indexStyle.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <nav>
@@ -18,14 +22,36 @@
         </nav>
     </header>
     <main>
-        <article class="Repuestos">
+        <section class="Repuestos">
             <p> ¡Todos los Repuestos de Notebook que Necesitas en un solo lugar!</p>
-            <form>            
-                <img src="../DesarrolloWeb/media/Servicompu_Coolers.png" alt="Servicompu_Coolers">
-                <img src="../DesarrolloWeb/media/Servicompu_Flexs.png" alt="Servicompu_Flexs">
-                <img src="../DesarrolloWeb/media/Servicompu_Teclados.png" alt="Servicompu_Teclados">
-            </form>          
-        </article>      
+            <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../DesarrolloWeb/media/Servicompu_Coolers.png" class="img-custom d-block w-100"
+                            alt="Servicompu_Coolers">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../DesarrolloWeb/media/Servicompu_Flexs.png" class="img-custom d-block w-100"
+                            alt="Servicompu_Flexs">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../DesarrolloWeb/media/Servicompu_Teclados.png" class="img-custom d-block w-100"
+                            alt="Servicompu_Teclados">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <br>
         <article class="Ofertas">
             <form>
                 <h1>¡Ofertas Imperdibles!</h1>
@@ -33,7 +59,14 @@
                     productos seleccionados. ¡No te pierdas esta increíble oferta!</p>
                 <button>Ver la Coleccion</button>
             </form>
-        </article> 
+        </article>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
